RESOLVED FIXED213011
REGRESSION(r262798): fast/mediastream/media-stream-track-interrupted.html is failing
https://bugs.webkit.org/show_bug.cgi?id=213011
Summary REGRESSION(r262798): fast/mediastream/media-stream-track-interrupted.html is ...
Diego Pino
Reported 2020-06-10 00:02:34 PDT
The test is failing in several platforms (iOS, GTK, WPE): https://results.webkit.org/?platform=GTK&platform=WPE&platform=ios&platform=mac&platform=win&suite=layout-tests&test=fast%2Fmediastream%2Fmedia-stream-track-interrupted.html Diff: https://build.webkit.org/results/Apple%20iOS%2013%20Simulator%20Release%20WK2%20(Tests)/r262834%20(4944)/fast/mediastream/media-stream-track-interrupted-diff.txt --- /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/fast/mediastream/media-stream-track-interrupted-expected.txt +++ /Volumes/Data/slave/ios-simulator-13-release-tests-wk2/build/layout-test-results/fast/mediastream/media-stream-track-interrupted-actual.txt @@ -1,6 +1,6 @@ -PASS Suspend/resume audio track +FAIL Suspend/resume audio track assert_false: track is no longer muted expected false got true PASS Create stream -PASS Interrupt video track -PASS Interrupt audio track +FAIL Interrupt video track assert_false: expected false got true +FAIL Interrupt audio track assert_false: expected false got true
Attachments
Patch (7.35 KB, patch)
2020-06-10 06:12 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-06-10 06:12:41 PDT
Radar WebKit Bug Importer
Comment 2 2020-06-10 06:13:19 PDT
EWS
Comment 3 2020-06-10 09:02:50 PDT
Committed r262841: <https://trac.webkit.org/changeset/262841> All reviewed patches have been landed. Closing bug and clearing flags on attachment 401536 [details].
Note You need to log in before you can comment on or make changes to this bug.