Source/WebCore/testing/Internals.cpp
@@ -5178,6 +5178,11 @@ bool Internals::isMediaStreamSourceInterrupted(MediaStreamTrack& track) const
     return track.source().interrupted();
 }
 
+bool Internals::isMediaStreamSourceEnded(MediaStreamTrack& track) const
+{
+    return track.source().isEnded();
+}
+
 bool Internals::isMockRealtimeMediaSourceCenterEnabled()
 {
     return MockRealtimeMediaSourceCenter::mockRealtimeMediaSourceCenterEnabled();
